<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_User">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:hint="ADD USER"
        android:text="@string/add" />

    <EditText
        android:id="@+id/txtuserid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/nhap_user_id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/nhap_user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtuseremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/nhap_user_email"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnusersave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="50dp"

        android:text="@string/save" />
</LinearLayout>